package managers;

import java.awt.event.KeyAdapter;
import java.awt.event.KeyEvent;

public class KeyManager extends KeyAdapter {



	@Override
	public void keyPressed(KeyEvent e){

	}

}