package tile;

import java.awt.image.BufferedImage;

public class Tile {

	BufferedImage image;
	boolean colisionable = false;

	public boolean isColisionable() {
		return colisionable;
	}
}