package business;

public class Position {

	int x;
	int y;

	public Position(int x, int y) {
		this.x = x;
		this.y = y;
	}

	public int getX() {
		return x;
	}
	public int getY() {
		return y;
	}

	//public void set(int x, int y){
	//	this.x = x;
	//	this.y = y;
	//}
	public void setX(int x){
		this.x = x;
	}

	public void setY(int y) {
		this.y = y;
	}

}