@startuml
'https://plantuml.com/class-diagram

skinparam roundcorner 20

skinparam class {
BackgroundColor LightGray
ArrowColor Black
BorderColor Black
}

/'
skinparam linetype ortho
skinparam stereotypeCBackgroundColor Red

'/

package interfaces{
    interface iceBreaker{
        + {abstract} breakIce()
    }

}

package gameObjects{

    class MovableObject

    package characters{

        package players{
            class Player
        }

        package enemies{
            class Enemy
            class Enemy1
        }
    }

    package obstacles{
        class Obstacle
        class Ice
    }

    package fruits{
        class Fruit
        class FruitWithMovement
    }

    abstract class GameObject{

        - position: Position
        - speed: Speed
        - collision: boolean
        - image: BufferedImage

        + {abstract} update()
        + {abstract} draw()
    }

    abstract class CollectableObject

}

package levels{
    class Level{
        - map: int[][]
        - readMap()
    }
}


package logicManagers{

    class KeyManager
    class TileManager
    class Tile
    class GamePanel
    class CollisionChecker
}


class Position{
    - x: int
    - y: int
}

class Speed{
    - speed: int
}

class Window
class BadIceCream

Window <-d- BadIceCream

BadIceCream --> GameState
BadIceCream --> MenuState
GameState --> Level

GameObject .u.. logicManagers

Level --> GameObject

GameObject --> Position
GameObject --> Speed

Enemy <|-- Enemy1

GameObject <|-- MovableObject
MovableObject <|-- Player
MovableObject <|-- Enemy

GameObject <|-- Obstacle
GameObject <|-- CollectableObject

CollectableObject <|-- Fruit
Fruit <|-- FruitWithMovement
Obstacle <|-- Ice

iceBreaker <.down. Player
iceBreaker <.down. Enemy1


@enduml